[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] } # reqwest with JSON parsing support
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] } # for our async runtime
